<resources>
    <string name="app_name">laboratoria android</string>
    <string name="grade_average">Oblicz średnią</string>
    <string name="result_average_text">Twoja średnia to %1$.2f</string>
    <string name="result_button_success_text">Super :)</string>
    <string name="result_button_failure_text">Tym razem mi nie poszło</string>
    <string name="finish_success">Gratulacje, otrzymujesz zaliecznie!</string>
    <string name="finish_failure">Wysyłam podanie o zaliczenie warunkowe</string>
    <string name="leaving_app">Opuszczasz aplikacje!</string>
    <string name="wpisz_imie">Wpisz imie</string>
    <string name="wpisz_nazwisko">Wpisz nazwisko</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="liczba_ocen">Liczba ocen</string>
    <string name="liczba_ocen_zakres">Liczba ocen (5-15)</string>
    <string name="oceny">Oceny</string>
    <string name="wynik">Wynik</string>
    <string name="phone_producer_text">Producer</string>
    <string name="phone_model">Model</string>
    <string name="phone_version">Version</string>
    <string name="phone_website">Website</string>
    <string name="website_button_text">Enter website</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="delete_all">Remove all</string>
    <string name="address">Adres</string>
    <string name="url">https://delikatesy-koszyk.pl/userdata/public/gfx/2756/articles_4d5c997ddecdad9f559bda38a0df3e54_article_day_v3.jpg</string>
    <string name="get_info">Download</string>
    <string name="filesize">File size</string>
    <string name="filetype">File type</string>
    <string name="downloadFile">Download file</string>
    <string name="downloaded_bytes">Downloaded bytes</string>
    <string name="imgDescription">img desc</string>
    <string name="save_image">save image</string>
    <string name="show_images">show images</string>
    <string-array name="nazwy_przedmiotow">
        <item>Matematyka</item>
        <item>Fizyka</item>
        <item>Chemia</item>
        <item>Informatyka</item>
        <item>Biologia</item>
        <item>Geografia</item>
        <item>Historia</item>
        <item>WOS</item>
        <item>Język polski</item>
        <item>Język angielski</item>
        <item>Język niemiecki</item>
        <item>Język francuski</item>
        <item>Język rosyjski</item>
        <item>Język hiszpański</item>
        <item>1</item>
    </string-array>
</resources>